[package]
name = "matrixable"
version = "0.3.0"
edition = "2021"
authors = ["tcheufa"]
description = "Traits and structs extending capabilities of matrix-like structures."
repository = "https://github.com/tcheufa/matrixable"
homepage = "docs.rs/matrixable"
keywords = ["matrix", "trait"]
categories = ["data-structures", "mathematics", "science"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

