[package]
name = "matrixable"
version = "0.5.0"
authors = ["tcheufa"]
description = "Traits and structs extending capabilities of matrix-like structures."
repository = "https://github.com/tcheufa/matrixable"
keywords = ["matrix", "trait"]
categories = ["data-structures", "mathematics", "science", "no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["impls"]
impls = []